--- a/10-06/package.json
+++ b/10-06/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "blob-stream": "^0.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "pdfkit": "^0.12.1"
   }
 }
